2000-04-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.c (cxrs, scm_init_pairs):  Simplify initialization of
	c[ad]+r functions.

	* procs.c (scm_init_iprocs), procs.h (scm_subr, scm_iproc,
	scm_dsubr, scm_init_iprocs):  Removed.

	* procs.h (SCM_SUBRF, SCM_DSUBRF):  Access the cell words
	directly instead of casting a cell to a C struct.

2000-04-22  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	Better modularization of GC extensions through new C level GC
	hooks:
	
	* weaks.c (scm_weaks_prehistory): New function: Add
	scm_weak_vector_gc_init to scm_before_mark_c_hook; Add
	scm_mark_weak_vector_spines to scm_before_sweep_c_hook.
	(scm_scan_weak_vectors): New function; added to
	scm_after_sweep_c_hook.

	* weaks.h (scm_weak_vectors, scm_weaks_prehistory): Added
	declarations.

	* guardians.h (scm_guardian_gc_init, scm_guardian_zombify): Are
	now static.

	* guardians.c (scm_guardian_gc_init): Turned into a hook function
	and added to scm_before_mark_c_hook.
	(scm_guardian_zombify): Turned into a hook function and added to
	scm_before_sweep_c_hook.

	* async.c (scm_sys_gc_async_thunk): Run after-gc-hook.
	Added #include "libguile/gc.h".

	* gc.h: Added #include "libguile/hooks.h".

	* gc.c: Removed #include "libguile/guardians.h".
	(scm_before_gc_c_hook, scm_before_mark_c_hook,
	scm_before_sweep_c_hook, scm_after_sweep_c_hook,
	scm_after_gc_c_hook): New C level hooks.
	(scm_after_gc_hook): New Scheme level hook.
	(scm_gc_sweep): Moved scanning of weak vectors to weaks.c.
	(scm_igc): Moved initialization of scm_weak_vectors and the call
	to scm_guardian_gc_init to respective module.
	(scm_mark_weak_vector_spines): Moved to weaks.c;
	Call to scm_guardian_zombify moved to guardians.c;
	Run scm_before_gc_c_hook, scm_before_sweep_c_hook,
	scm_after_gc_c_hook at appropriate places.
	(scm_init_gc): Initialize scm_after_gc_hook.

	* hooks.c, hooks.h (scm_make_hook_with_name): Removed deprecated
	function.

	* init.c (scm_boot_guile_1): Added `scm_init_hooks'.
